<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_PlanarMover" Id="{e98e5f10-cdde-43fc-96da-1ae5f511366a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PlanarMover

VAR_INPUT
	nMoverId			    : UDINT;
	iTcIoXtsXpuMover	: REFERENCE TO Tc3_XTS_Utility.I_TcIoXtsXpuMover;
END_VAR

VAR
	_McPlanarMover		: Tc3_Mc3PlanarMotion.MC_PlanarMover;
	_PlanarTrail    	: Tc3_Mc3PlanarMotion.MC_PlanarTrackTrail;

	stPositionInfo		: Tc3_XTS_Utility.ST_PositionInfo;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="Methods" Id="{497e6300-3e6d-49b8-a318-13b94b960f56}" />
    <Folder Name="Properties" Id="{bafe569f-b5f0-4de9-ae48-854cd11ccd2e}" />
    <Property Name="IsCommandedInShortcut" Id="{e5e69e7e-f163-4728-82da-b10e582ce622}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY IsCommandedInShortcut : BOOL]]></Declaration>
      <Get Name="Get" Id="{7a71ba46-249d-415a-b1f4-f1c52c07bed0}">
        <Declaration><![CDATA[VAR
	nCounter: UDINT := 0;
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_mcPlanarMover.GetTrackTrailInformation(_PlanarTrail);

IF _PlanarTrail.Error OR _PlanarTrail.Size < 1 THEN
   IsCommandedInShortcut := FALSE;
   RETURN;
END_IF
   
FOR nCounter := 0 TO _PlanarTrail.Size - 1 DO
	IF _PlanarTrail.GetTrackOidAt(nCounter) = GVL_Mc3.MC_Tracks[E_Tracknum.Small].MCTOPLC_STD.TrackOID  THEN
		IsCommandedInShortcut := TRUE;
		RETURN;
	END_IF
END_FOR

IsCommandedInShortcut := FALSE;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="JoinTrack" Id="{fd819ce6-c064-4bae-aa84-926325f13c12}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD JoinTrack

VAR_INPUT
	feedback: REFERENCE TO MC_PlanarFeedback;
END_VAR

VAR_IN_OUT
	track: MC_PlanarTrack;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_McPlanarMover.JoinTrack(feedback, track, 0, 0);]]></ST>
      </Implementation>
    </Method>
    <Property Name="McPlanarMover" Id="{79d72b75-52b9-47c8-886e-5e60276bf5f1}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY McPlanarMover : REFERENCE TO MC_PlanarMover]]></Declaration>
      <Get Name="Get" Id="{71cad725-c4c4-49c5-9410-cee17b681f5a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[McPlanarMover ref= _McPlanarMover;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_PositionInfo" Id="{eee46ce5-009e-038a-12e5-cdbf8f2886af}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY P_PositionInfo : REFERENCE TO Tc3_XTS_Utility.ST_PositionInfo]]></Declaration>
      <Get Name="Get" Id="{58ff9574-093b-05dd-3592-27328f83735e}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_PositionInfo	REF= stPositionInfo;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Update" Id="{2a189ea7-97f2-4dc0-980a-fdde9c091766}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD Update : PVOID]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF iTcIoXtsXpuMover <> Tc3_Module.NULL THEN
  stPositionInfo	:= iTcIoXtsXpuMover.GetPositionInfo();
END_IF

_mcPlanarMover.Update();

_mcPlanarMover.GetTrackTrailInformation(_PlanarTrail);

IF _PlanarTrail.Error OR _PlanarTrail.Size <= 1 THEN
   RETURN;
END_IF

IF iTcIoXtsXpuMover <> Tc3_Module.NULL THEN
  //SmallCircle
  IF _PlanarTrail.GetTrackOidAt(1) = MC_Tracks[E_TrackNum.Small].MCTOPLC_STD.TrackOID   THEN
    iTcIoXtsXpuMover.SetActiveTrackObjectId(XtsShortcutOid);
  //BigCircle
  ELSIF _PlanarTrail.GetTrackOidAt(1) =MC_Tracks[E_TrackNum.Big].MCTOPLC_STD.TrackOID THEN
    iTcIoXtsXpuMover.SetActiveTrackObjectId(XtsOutterLoopOid);
  END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>